# logitech_linux_controllers

./: .gitignore  AGENTS.md  CLAUDE.md  COLOR_REFACTORING.md  README.md  REFACTORING.md  lights  logitech_g560.py  test_all_zones.py  testing.ipynb
archive/: README.md
archive/legacy_scripts/: test_claim_g560.py  test_one_zone_red.py
g560ctl/: README.md  pyproject.toml
g560ctl/src/g560ctl/: cli.py  colors.py  controller.py  device.py  models.py  tui.py  zones.py
g560ctl/src/logitech_lighting/: __init__.py  cli.py  controller.py  tui.py  utils.py
g560ctl/src/logitech_lighting/core/: __init__.py  colors.py  exceptions.py  models.py  transport.py
g560ctl/src/logitech_lighting/devices/: __init__.py  base.py
g560ctl/src/logitech_lighting/devices/g560/: __init__.py  config.py
g560ctl/test/: test_colors.py  test_controller.py  test_new_colors.py  test_new_controller.py  test_new_zones.py  test_zones.py
