[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "g560ctl"
version = "0.1.0"
description = "Control Logitech G560 lighting on Linux"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyusb>=1.2",
]

[project.optional-dependencies]
tui = [
  "textual>=0.50",
]

[project.scripts]
g560ctl = "g560ctl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]